shii, ainda não funcionou

--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
         <div id="files">
             <div id="filer1">
                 <div id="bts1">
-                    <div id="inside"></div>
+                    <div id="inside1"></div>
                 </div>
                 <div id="bts2">
-                    <div id="inside"></div>
+                    <div id="inside2"></div>
                 </div>
                 <div id="bts3">
                     <div id="inside"></div>
@@ -58,10 +58,10 @@
 
             <div id="filer2">
                 <div id="bts1">
-                    <div id="inside"></div>
+                    <div id="inside1"></div>
                 </div>
                 <div id="bts2">
-                    <div id="inside"></div>
+                    <div id="inside2"></div>
                 </div>
                 <div id="bts3">
                     <div id="inside"></div>
@@ -73,10 +73,10 @@
 
             <div id="filer3">
                 <div id="bts1">
-                    <div id="inside"></div>
+                    <div id="inside1"></div>
                 </div>
                 <div id="bts2">
-                    <div id="inside"></div>
+                    <div id="inside2"></div>
                 </div>
                 <div id="bts3">
                     <div id="inside"></div>
@@ -88,10 +88,10 @@
 
             <div id="filer4">
                 <div id="bts1">
-                    <div id="inside"></div>
+                    <div id="inside1"></div>
                 </div>
                 <div id="bts2">
-                    <div id="inside"></div>
+                    <div id="inside2"></div>
                 </div>
                 <div id="bts3">
                     <div id="inside"></div>
@@ -103,10 +103,10 @@
 
             <div id="filer5">
                 <div id="bts1">
-                    <div id="inside"></div>
+                    <div id="inside1"></div>
                 </div>
                 <div id="bts2">
-                    <div id="inside"></div>
+                    <div id="inside2"></div>
                 </div>
                 <div id="bts3">
                     <div id="inside"></div>
@@ -137,7 +137,6 @@
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
         crossorigin="anonymous"></script>
     <script src="/JS/script.js"></script>
-    <script src="/JS/script2.js"></script>
 </body>
 
 </html>
